fix up/bottom padding on smaller screens

--- a/src/_sass/pages/events.scss
+++ b/src/_sass/pages/events.scss
@@ -167,6 +167,7 @@
     }
     &__header {
       padding: 26px;
+      margin: calc(100px/2/2) auto !important;
     }  
   }
 }
